# phi

./: .clang-format  .clang-tidy  .clangd  .gitignore  Brewfile  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  sysutils.py
assets/: ascii_art_phi_logo.txt
documentation/: separators.md  sqlite_layout.md
include/: Exceptions.hpp  Logger.hpp  TaskStruct.hpp  config.hpp  datetime.hpp  utils.hpp
include/bus/: Bus.hpp  tasks.hpp
include/database/: DBManager.hpp
include/networking/: ConnectSocket.hpp  ListenSocket.hpp  ListenSocketSpawner.hpp  SimpleSocket.hpp
include/nlohmann/: adl_serializer.hpp  byte_container_with_subtype.hpp  json.hpp  json_fwd.hpp  ordered_map.hpp
include/nlohmann/detail/: abi_macros.hpp  exceptions.hpp  hash.hpp  json_custom_base_class.hpp  json_pointer.hpp  json_ref.hpp  macro_scope.hpp  macro_unscope.hpp  string_concat.hpp  string_escape.hpp  string_utils.hpp  value_t.hpp
include/nlohmann/detail/conversions/: from_json.hpp  to_chars.hpp  to_json.hpp
include/nlohmann/detail/input/: binary_reader.hpp  input_adapters.hpp  json_sax.hpp  lexer.hpp  parser.hpp  position_t.hpp
include/nlohmann/detail/iterators/: internal_iterator.hpp  iter_impl.hpp  iteration_proxy.hpp  iterator_traits.hpp  json_reverse_iterator.hpp  (+1 more)
include/phi/: Pipeline.hpp  do_setup.hpp  error_handling.hpp
include/phi/database/: Database.hpp  structs.hpp
include/phi/encryption/: Encryptor.hpp  MessageTypes.hpp  gzip_basic.hpp  secrets.hpp
include/phi/ui/: Manager.hpp  color_defs.hpp  constants.hpp  utils.hpp
include/phid/: MessageQueue.hpp  Pipeline.hpp  PipelineManager.hpp  STARTUP.hpp  error_handling.hpp  listen_loop.hpp
include/phid/database/: DBManager.hpp
include/phid/encryption/: EncryptedMessage.hpp  EncryptionManager.hpp  EncryptionManager.ipp  MessageTypes.hpp  rng.hpp  secrets.hpp
include/tasks/: TaskMaster.hpp  Tasks.hpp  task_struct.hpp
include/termcolor/: termcolor.hpp
include/terminal-rain/: drop.h  rain.h  random.h
include/utils/: count_emojis.hpp  file_utils.hpp  misc_utils.hpp  str_utils.hpp
include/zlc/: gzipcomplete.hpp  zlibbase.hpp  zlibmisc.hpp  zlibraw.hpp
planning/: main.psuedo
src/: Bus.cpp  TaskMaster.cpp  Tasks.cpp  main.cpp
src/phi/: Database.cpp  Encryptor.cpp  Manager.cpp  Manager_components.cpp  Manager_login_page.cpp  Manager_render_functions.cpp  Manager_screensaver.cpp  Pipeline.cpp  do_setup.cpp  error_handling.cpp  main.cpp  secrets.cpp
src/phid/: ConnectSocket.cpp  DBManager.cpp  EncryptionManager.cpp  ListenSocket.cpp  ListenSocketSpawner.cpp  MessageQueue.cpp  Pipeline.cpp  PipelineManager.cpp  STARTUP.cpp  error_handling.cpp  listen_loop.cpp  main.cpp  rng.cpp  secrets.cpp
src/shared/: DBManager.cpp  Exceptions.cpp  Logger.cpp  SimpleSocket.cpp
tests/: mock_handshake.py
(+10 files in other folders)
